--- a/feewaiver/templates/feewaiver/base.html
+++ b/feewaiver/templates/feewaiver/base.html
@@ -58,7 +58,7 @@
                                     <span class="icon-bar"></span>
                                     <span class="icon-bar"></span>
                                 </a>
-                                <a class="navbar-brand" href="{% url 'ds_home' %}"><div style="inline"><img src="{% static 'feewaiver/img/dpaw_small.png' %}">Home</div></a>
+                                <a class="navbar-brand" href="{% url 'home' %}"><div style="inline"><img src="{% static 'feewaiver/img/dpaw_small.png' %}">Home</div></a>
                             </div>
                             <div id="navbar" class="navbar-collapse collapse">
                                 <ul class="nav navbar-nav navbar-right">
@@ -102,7 +102,10 @@
                                                 {% endfor %}
                                                 <li role="separator" class="divider"></li>
 
+                                                {% comment %}
                                                 <li><a href="{% url 'accounts:logout' %}?next=/">Logout</a></li>
+                                                {% endcomment %}
+
                                             </ul>
                                         </li>
                                     {% endif %}
