--- a/feewaiver/templates/ledger/accounts/change_emailuser_list.html
+++ b/feewaiver/templates/ledger/accounts/change_emailuser_list.html
@@ -74,8 +74,8 @@
         </p>
         {{ cl.formset.non_form_errors }}
     {% endif %}
+    {% block search %}{% search_form cl %}{% endblock %}
     <div class="module{% if cl.has_filters %} filtered{% endif %}" id="changelist">
-      {% block search %}{% search_form cl %}{% endblock %}
       {% block date_hierarchy %}{% date_hierarchy cl %}{% endblock %}
 
       {% block filters %}
@@ -87,7 +87,7 @@
         {% endif %}
       {% endblock %}
 
-      <form id="changelist-form" method="post"{% if cl.formset.is_multipart %} enctype="multipart/form-data"{% endif %} novalidate>{% csrf_token %}
+      <form id="changelist-form" method="post"{% if cl.formset.is_multipart %} enctype="multipart/form-data"{% endif %} novalidate style="width:100%;">{% csrf_token %}
       {% if cl.formset %}
         <div>{{ cl.formset.management_form }}</div>
       {% endif %}
