--- a/feewaiver/templates/feewaiver/base.html
+++ b/feewaiver/templates/feewaiver/base.html
@@ -91,13 +91,13 @@
                                                 {% endif %}
                                                 {% for org in request.user.feewaiver_organisations.all %}
                                                     {% for org_contact in org.contacts.all%}
-                                                        {% ifequal org_contact.email request.user.email %}
+                                                        {% if org_contact.email == request.user.email %}
                                                             {% if org_contact.user_status == 'active' %}
                                                                 {% if org_contact.is_admin or org_contact.check_consultant %}
                                                                     <li><a href="/external/organisations/manage/{{org.id}}">Manage {{ org.organisation.name}} </a></li>
                                                                 {% endif %}
                                                             {% endif %}
-                                                        {% endifequal %}
+                                                        {% endif %}
                                                     {% endfor %}
                                                 {% endfor %}
                                                 <li role="separator" class="divider"></li>
