--- a/feewaiver/templates/feewaiver/base.html
+++ b/feewaiver/templates/feewaiver/base.html
@@ -1,4 +1,4 @@
-{% load bootstrap3 %}
+{% load django_bootstrap5 %}
 
 {% load static %}
 
@@ -52,7 +52,7 @@
                     <nav class="navbar navbar-default">
                         <div class="container">
                             <div class="navbar-header">
-                                <a type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+                                <a type="button" class="navbar-toggle collapsed" data-bs-toggle="collapse" data-bs-target="#navbar" aria-expanded="false" aria-controls="navbar">
                                     <span class="sr-only">Toggle navigation</span>
                                     <span class="icon-bar"></span>
                                     <span class="icon-bar"></span>
@@ -61,7 +61,7 @@
                                 <a class="navbar-brand" href="{% url 'home' %}"><div style="inline"><img src="{% static 'feewaiver/img/dpaw_small.png' %}">Home</div></a>
                             </div>
                             <div id="navbar" class="navbar-collapse collapse">
-                                <ul class="nav navbar-nav navbar-right">
+                                <ul class="nav navbar-nav ms-auto">
                                     {% if request.user.is_authenticated %}
                                         <li>
                                             <a>
@@ -78,7 +78,7 @@
                                             </a>
                                         </li>
                                         <li class="dropdown">
-                                            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+                                            <a href="#" class="dropdown-toggle" data-bs-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
                                                 Options
                                                 <span class="caret"></span>
                                             </a>
@@ -113,25 +113,20 @@
                     </nav>
                     {% endif %}
                 </div>
-
             </div>
         {% endblock %}
+
         {% block breadcrumbs %}
         {% endblock %}
+
         {% block messages %}
             <div class="container">
                 <div class="row">
                     <div class="col-md-12">
-                        {% for message in messages %}
-                            <div class="{{ message|bootstrap_message_classes }} alert-dismissable">
-                                <button type="button" class="close" data-dismiss="alert" aria-hidden="true">&#215;</button>
-                                {{ message|safe }}
-                            </div>
-                        {% endfor %}
+                        {% bootstrap_messages %}
                     </div>
                 </div>
             </div>
-
         {% endblock %}
 
 		{% if system_maintenance_due %}
@@ -142,8 +137,10 @@
 
         {% block content %}
         {% endblock %}
+
         {% block modals %}
         {% endblock %}
+
         {% if not dev %}
             <script type="text/javascript" src="{% static 'feewaiver_vue/js/chunk-vendors.js' %}?v={{GIT_COMMIT_HASH}}"></script>
             {% if app_build_url %}
@@ -154,6 +151,7 @@
         {% else %}
             <script type="text/javascript" src="{{ dev_url }}"></script>
         {% endif %}
+
         {% block custom_js %}
         {% endblock %}
     </body>
