--- a/feewaiver/templates/feewaiver/reversion_history.html
+++ b/feewaiver/templates/feewaiver/reversion_history.html
@@ -30,7 +30,7 @@
 <div class="navbar navbar-fixed-bottom">
   <div class="navbar-inner">
     <div class="container">
-      <p class="pull-right">
+      <p class="float-end">
           {% comment %}
           <a href="{% url 'bushfire:bushfire_final' bushfire.id %}" class="btn btn-success">Return</a>
           {% endcomment %}
