--- a/feewaiver/templates/feewaiver/dash/index.html
+++ b/feewaiver/templates/feewaiver/dash/index.html
@@ -15,9 +15,10 @@
 
 {% block content %}
     <div class="container-fluid" id="dashboard-table-container">
-        {% block vue-component %}
+        dash/index.html 1
+        <!-- {% block vue-component %} -->
         <div id="app"></div>
-        {% endblock %}
-
+        <!-- {% endblock %} -->
+        dash/index.html 2
     </div>
 {% endblock %}
