Fix a bug where Options dropdown menu doesnot work because the javascript is not loaded

--- a/feewaiver/templates/feewaiver/base.html
+++ b/feewaiver/templates/feewaiver/base.html
@@ -163,6 +163,8 @@
             <script type="text/javascript" src="{{ dev_url }}"></script>
         {% endif %}
 
+        {% bootstrap_javascript %}
+        
         {% block custom_js %}
         {% endblock %}
     </body>
