--- a/feewaiver/templates/feewaiver/base.html
+++ b/feewaiver/templates/feewaiver/base.html
@@ -38,6 +38,7 @@
 
         </meta>
         <meta name="viewport" content="width=device-width, initial-scale=1" />
+        <link rel="icon" type="image/svg+xml" href="{% static 'feewaiver/img/favicon.svg' %}">
     </head>
     <body>
         <header class="topmast">
