--- a/feewaiver/templates/feewaiver/base.html
+++ b/feewaiver/templates/feewaiver/base.html
@@ -1,4 +1,5 @@
 {% load django_bootstrap5 %}
+{% comment %} {% extends "webtemplate_dbca/base_b5_auth_session.html" %} {% endcomment %}
 
 {% load static %}
 
@@ -15,16 +16,16 @@
 {% support_email as support_email %}
 {% GIT_COMMIT_HASH as GIT_COMMIT_HASH %}
 
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
     <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta charset="utf-8">
+        <meta http-equiv="x-ua-compatible" content="ie=edge">
             {% bootstrap_css %}
-                <link type="text/css" href="{% static 'feewaiver/css/base.css' %}?ver={{ GIT_COMMIT_HASH }}" rel="stylesheet"/>
+                <link type="text/css" href="{% static 'feewaiver/css/base.css' %}?ver={{ git_commit_hash }}" rel="stylesheet"/>
 
             {% if not dev %}
-	    <link rel="stylesheet" href="{% static 'feewaiver_vue/css/app.css' %}?v={{GIT_COMMIT_HASH}}">
+	    <link rel="stylesheet" href="{% static 'feewaiver_vue/css/app.css' %}?v={{git_commit_hash}}">
             {% endif %}
             {% block extra_css %}
             {% endblock %}
@@ -54,21 +55,21 @@
                         <div class="container">
                             <!-- <div class="navbar-header">
                                 <a type="button" class="navbar-toggle collapsed" data-bs-toggle="collapse" data-bs-target="#navbar" aria-expanded="false" aria-controls="navbar">
-                                    <span class="sr-only">Toggle navigation</span>
+                                    <span class="sr-only">toggle navigation</span>
                                     <span class="icon-bar"></span>
                                     <span class="icon-bar"></span>
                                     <span class="icon-bar"></span>
                                 </a>
-                                <a class="navbar-brand" href="{% url 'home' %}"><div style="inline"><img src="{% static 'feewaiver/img/dpaw_small.png' %}">Home</div></a>
+                                <a class="navbar-brand" href="{% url 'home' %}"><div style="inline"><img src="{% static 'feewaiver/img/dpaw_small.png' %}">home</div></a>
                             </div> -->
 
                             <a class="navbar-brand" href="{% url 'home' %}">
                                 <div class="d-inline-flex align-items-center">
-                                    <img src="{% static 'feewaiver/img/dpaw_small.png' %}" alt="Logo">
-                                    <span class="ms-2">Home</span>
+                                    <img src="{% static 'feewaiver/img/dpaw_small.png' %}" alt="logo">
+                                    <span class="ms-2">home</span>
                                 </div>
                             </a>
-                            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbar" aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation">
+                            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbar" aria-controls="navbar" aria-expanded="false" aria-label="toggle navigation">
                                 <span class="navbar-toggler-icon"></span>
                             </button>
 
@@ -77,7 +78,7 @@
                                     {% if request.user.is_authenticated %}
                                         <li class="nav-item">
                                             <a class="nav-link">
-                                                Welcome
+                                                welcome
                                                 <strong>
                                                     {% if request.user.first_name %}
                                                         {{ request.user.get_short_name }}
@@ -91,29 +92,29 @@
                                         </li>
                                         <li class="nav-item dropdown">
                                             <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
-                                                Options
+                                                options
                                                 <span class="caret"></span>
                                             </a>
-                                            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                            <ul class="dropdown-menu" aria-labelledby="navbardropdown">
                                                 {% if is_feewaiver_admin_user or request.user.is_superuser %}
-                                                    <li><a class="dropdown-item" href="{% url 'admin:index' %}">Admin</a></li>
+                                                    <li><a class="dropdown-item" href="{% url 'admin:index' %}">admin</a></li>
                                                 {% endif %}
                                                 {% if show_tests and request.user.is_superuser %}
-                                                    <li><a class="dropdown-item" href="{% url 'test-emails' %}">Test Emails</a></li>
+                                                    <li><a class="dropdown-item" href="{% url 'test-emails' %}">test emails</a></li>
                                                 {% endif %}
                                                 {% for org in request.user.feewaiver_organisations.all %}
                                                     {% for org_contact in org.contacts.all%}
                                                         {% if org_contact.email == request.user.email %}
                                                             {% if org_contact.user_status == 'active' %}
                                                                 {% if org_contact.is_admin or org_contact.check_consultant %}
-                                                                    <li><a class="dropdown-item" href="/external/organisations/manage/{{org.id}}">Manage {{ org.organisation.name}} </a></li>
+                                                                    <li><a class="dropdown-item" href="/external/organisations/manage/{{org.id}}">manage {{ org.organisation.name}} </a></li>
                                                                 {% endif %}
                                                             {% endif %}
                                                         {% endif %}
                                                     {% endfor %}
                                                 {% endfor %}
                                                 <li><hr class="dropdown-divider"></li>
-                                                <li><a class="dropdown-item" href="{% url 'accounts:logout' %}?next=/">Logout</a></li>
+                                                <li><a class="dropdown-item" href="{% url 'accounts:logout' %}?next=/">logout</a></li>
                                             </ul>
                                         </li>
                                     {% endif %}
@@ -143,7 +144,7 @@
 
 		{% if system_maintenance_due %}
 		    <div class="alert alert-warning">
-		    	<strong>Notice!</strong> System will be down for maintenance between {{ system_maintenance_due }}
+		    	<strong>notice!</strong> system will be down for maintenance between {{ system_maintenance_due }}
 		    </div>
         {% endif %}
 
@@ -154,11 +155,11 @@
         {% endblock %}
 
         {% if not dev %}
-            <script type="text/javascript" src="{% static 'feewaiver_vue/js/chunk-vendors.js' %}?v={{GIT_COMMIT_HASH}}"></script>
+            <script type="text/javascript" src="{% static 'feewaiver_vue/js/chunk-vendors.js' %}?v={{git_commit_hash}}"></script>
             {% if app_build_url %}
                 <script type="text/javascript" src="{{ app_build_url }}"></script>
             {% else %}
-                <script type="text/javascript" src="{% static 'feewaiver_vue/js/app.js' %}?v={{GIT_COMMIT_HASH}}"></script>
+                <script type="text/javascript" src="{% static 'feewaiver_vue/js/app.js' %}?v={{git_commit_hash}}"></script>
             {% endif %}
         {% else %}
             <script type="text/javascript" src="{{ dev_url }}"></script>
