--- a/feewaiver/templates/feewaiver/dash/index.html
+++ b/feewaiver/templates/feewaiver/dash/index.html
@@ -2,10 +2,16 @@
 {% load static %}
 {% load users %}
 {% block extra_css %}
-    <!-- <link href="//static.dpaw.wa.gov.au/static/cdnjs/ajax/libs/datatables/1.10.12/css/dataTables.bootstrap.min.css" rel="stylesheet"/>
-    <link href="//static.dpaw.wa.gov.au/static/libs/select2/3.5.3/select2.min.css" rel="stylesheet"/>
-    <link href="//static.dpaw.wa.gov.au/static/libs/select2-bootstrap-css/1.4.6/select2-bootstrap.css" rel="stylesheet"/>
-    <link href="//static.dpaw.wa.gov.au/static/cdnjs/ajax/libs/font-awesome/4.7.0/css/font-awesome.css" rel="stylesheet"/> -->
+{% comment %}
+    All CSS files should be bundled into a single file, so there is no need to include links to each file here.
+    However, for some reason, the CSS files are not being bundled correctly, so listing links to each file here.
+    Ideally, there should be no links at all in this section.
+{% endcomment %}
+    <link rel="stylesheet" href="{% static 'feewaiver/css/dataTables.bootstrap5.min.css' %}">
+    <link rel="stylesheet" href="{% static 'feewaiver/css/buttons.bootstrap5.min.css' %}">
+    <link rel="stylesheet" href="{% static 'feewaiver/css/responsive.bootstrap5.min.css' %}">
+    <link rel="stylesheet" href="{% static 'feewaiver/css/select2.min.css' %}">
+    <link rel="stylesheet" href="{% static 'feewaiver/css/select2-bootstrap-5-theme.min.css' %}">
 {% endblock %}
 {% block extra_js %}
     {{super}}
