--- a/feewaiver/templates/feewaiver/base.html
+++ b/feewaiver/templates/feewaiver/base.html
@@ -148,8 +148,10 @@
 		    </div>
         {% endif %}
 
-        {% block content %}
-        {% endblock %}
+        <div class="mt-3">
+            {% block content %}
+            {% endblock %}
+        </div>
 
         {% block modals %}
         {% endblock %}
