Working on the issue of the section_toggle

--- a/feewaiver/templates/feewaiver/base.html
+++ b/feewaiver/templates/feewaiver/base.html
@@ -1,9 +1,11 @@
 {% load django_bootstrap5 %}
 {% comment %} {% extends "webtemplate_dbca/base_b5_auth_session.html" %} {% endcomment %}
+{% comment %} {% extends "webtemplate_dbca/base_b5_auth_session.html" %} {% endcomment %}
 
 {% load static %}
 {% load users %}
 {% load utils %}
+{% load django_bootstrap5 %}
 
 {% is_internal as is_internal_login %}
 {% is_feewaiver_admin as is_feewaiver_admin_user %}
