--- a/feewaiver/templates/feewaiver/base.html
+++ b/feewaiver/templates/feewaiver/base.html
@@ -23,9 +23,9 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
-            <link rel="stylesheet" href="{% static 'feewaiver/css/base.css' %}?ver={{ git_commit_hash }}"/>
-            <link rel="stylesheet" href="{% static 'feewaiver_vue/css/app.css' %}?v={{git_commit_hash}}"/>
-            <link rel="stylesheet" href="{% static 'feewaiver_vue/css/chunk-vendors.css' %}?v={{git_commit_hash}}"/>
+            <link rel="stylesheet" href="{% static 'feewaiver/css/base.css' %}?ver={{ GIT_COMMIT_HASH }}"/>
+            <link rel="stylesheet" href="{% static 'feewaiver_vue/css/app.css' %}?v={{GIT_COMMIT_HASH}}"/>
+            <link rel="stylesheet" href="{% static 'feewaiver_vue/css/chunk-vendors.css' %}?v={{GIT_COMMIT_HASH}}"/>
 
             {% block extra_css %}
             {% endblock %}
@@ -158,11 +158,11 @@
         {% endblock %}
 
         {% if not dev %}
-            <script type="text/javascript" src="{% static 'feewaiver_vue/js/chunk-vendors.js' %}?v={{git_commit_hash}}"></script>
+            <script type="text/javascript" src="{% static 'feewaiver_vue/js/chunk-vendors.js' %}?v={{GIT_COMMIT_HASH}}"></script>
             {% if app_build_url %}
                 <script type="text/javascript" src="{{ app_build_url }}"></script>
             {% else %}
-                <script type="text/javascript" src="{% static 'feewaiver_vue/js/app.js' %}?v={{git_commit_hash}}"></script>
+                <script type="text/javascript" src="{% static 'feewaiver_vue/js/app.js' %}?v={{GIT_COMMIT_HASH}}"></script>
             {% endif %}
         {% else %}
             <script type="text/javascript" src="{{ dev_url }}"></script>
