--- a/feewaiver/templates/feewaiver/base.html
+++ b/feewaiver/templates/feewaiver/base.html
@@ -2,6 +2,7 @@
 {% comment %} {% extends "webtemplate_dbca/base_b5_auth_session.html" %} {% endcomment %}
 {% comment %} {% extends "webtemplate_dbca/base_b5_auth_session.html" %} {% endcomment %}
 
+{% load django_vite %}
 {% load static %}
 {% load users %}
 {% load utils %}
@@ -24,13 +25,12 @@
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
             <link rel="stylesheet" href="{% static 'feewaiver/css/base.css' %}?ver={{ GIT_COMMIT_HASH }}"/>
-            <link rel="stylesheet" href="{% static 'feewaiver_vue/css/app.css' %}?v={{GIT_COMMIT_HASH}}"/>
-            <link rel="stylesheet" href="{% static 'feewaiver_vue/css/chunk-vendors.css' %}?v={{GIT_COMMIT_HASH}}"/>
 
             {% block extra_css %}
             {% endblock %}
 
             {% block extra_js %}
+                {% vite_hmr_client %}
             {% endblock %}
 
             <title>
@@ -157,20 +157,10 @@
         {% block modals %}
         {% endblock %}
 
-        {% if not dev %}
-            <script type="text/javascript" src="{% static 'feewaiver_vue/js/chunk-vendors.js' %}?v={{GIT_COMMIT_HASH}}"></script>
-            {% if app_build_url %}
-                <script type="text/javascript" src="{{ app_build_url }}"></script>
-            {% else %}
-                <script type="text/javascript" src="{% static 'feewaiver_vue/js/app.js' %}?v={{GIT_COMMIT_HASH}}"></script>
-            {% endif %}
-        {% else %}
-            <script type="text/javascript" src="{{ dev_url }}"></script>
-        {% endif %}
-
         {% bootstrap_javascript %}
-        
+
         {% block custom_js %}
+            {% vite_asset vue3_entry_script %}
         {% endblock %}
     </body>
 </html>
